force-app/main/default/objects/Job_Search_Communication__c/Job_Search_Communication__c.object-meta.xml
<CustomObject>
    <description>Job Search Tracker object to track phone calls, emails, and all other communications</description>
    <label>Job Search Communication</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Job Search Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Search Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>