force-app/main/default/objects/Job_Search_Communication__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Job Search Tracker relationship to Role</description>
    <inlineHelpText>If this communication is about a Role link it here.</inlineHelpText>
    <label>Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Job Search Communications</relationshipLabel>
    <relationshipName>Job_Search_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>