force-app/main/default/objects/Job_Search_Communication__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>What is the purpose of this communication?</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
                <default>true</default>
                <label>Discovery</label>
            </value>
            <value>
                <fullName>Coordination</fullName>
            </value>
            <value>
                <fullName>First Round Interview</fullName>
            </value>
            <value>
                <fullName>Second Round Interview</fullName>
            </value>
            <value>
                <fullName>Third Round+ Interview</fullName>
            </value>
            <value>
                <fullName>Offer Discussion</fullName>
            </value>
            <value>
                <fullName>Postmortem</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>